# mcp

./: .env.example  .gitignore  THINKING_STREAM_README.md  anget.py  main.py  pyproject.toml  run_tests.py  server.py  test_tool_events.py
commands/: builtin_commands.py
demo/: info.py  info1.py
models/: deepseek.py  ollama_qwen.py  qwen.py
prompts/: prompt.py
tests/: README.md  __init__.py  test_code_reader.py
tools/: code_patcher.py  code_reader.py  coder.py
